# clang

./: .gitignore
HW01/: CMakeLists.txt  README.md  main.c
HW02/: Makefile  README.md  main.c
HW03/: README.md  main.asm  main.c
HW04/: README.md  build_curl.sh
HW05/: README.md  Theory.md  gtk4_example.c  main_old.c  meson.build
HW05/clib/: .gitignore  package.json
HW05/clib/src/common/: clib-package.c
HW05/clib/test/package/: package-dependency-new  package-install  package-install-dependencies  package-install-dev-dependencies  package-load-from-manifest  package-load-manifest-file  package-new  package-new-from-slug  package-parse-author  package-parse-name  package-parse-version  package-url
HW05/src/: main.c
HW05/src/directory/: directory_parser.c  directory_parser.h
OOP/src/desktop/: desktop_app.c  desktop_app.h
